[gd_scene load_steps=5 format=3 uid="uid://4w2dg1ct8qs0"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_yo68c"]
[ext_resource type="Script" path="res://scenes/run_reward/run_reward.gd" id="2_7q2bo"]
[ext_resource type="StyleBox" uid="uid://dosxsnv8rmhmx" path="res://scenes/events/event_panel_bg.tres" id="2_u1yn7"]
[ext_resource type="Texture2D" uid="uid://fy3t8ltfti4o" path="res://scenes/run_reward/defeat.png" id="4_4e4jk"]

[node name="run_reward" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yo68c")
script = ExtResource("2_7q2bo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_u1yn7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="Rewards" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rewards"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.168627, 0.647059, 0.729412, 1)
theme_override_constants/outline_size = 5
text = "Rewards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/Rewards"]
layout_mode = 2
text = "Pick a card!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rewards"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50
alignment = 1

[node name="ContinueBtn" type="Button" parent="PanelContainer/MarginContainer/Rewards"]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="Loss" type="CenterContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/Loss"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Loss/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.760784, 0.298039, 0.298039, 1)
theme_override_constants/outline_size = 5
text = "Defeat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/Loss/VBox"]
layout_mode = 2
text = "You succumb to the relentless fury of Poseidon's wrath.
Your fate is sealed upon the blood-soaked battlefield."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/Loss/VBox"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/Loss/VBox/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_4e4jk")
expand_mode = 5
stretch_mode = 5

[node name="ContinueLossBtn" type="Button" parent="PanelContainer/MarginContainer/Loss/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rewards/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Loss/VBox/ContinueLossBtn" to="." method="_on_continue_loss_btn_pressed"]
